<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_add_car"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.mervesimsek.vehicleapp.controller.VehicleAddController"
        tools:showIn="@layout/activity_add_car">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/brandname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/brandlabel"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="130dp"
            android:text=":  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blab"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
          />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/brandhint"
        android:textColorHint="@color/grey"
        android:ems="10"
        android:id="@+id/brandedit"
        android:layout_toEndOf="@+id/blab"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="4" />


    <TextView
        android:layout_marginTop="70dp"
        android:text="@string/modelname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modellabel"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/brandedit" />



    <EditText
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/modelhint"
        android:maxLength="20"
        android:maxLines="4"
        android:textColorHint="@color/grey"
        android:ems="10"
        android:id="@+id/modeledit"
        android:layout_toEndOf="@+id/modellabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />


        <TextView
            android:layout_marginTop="70dp"
            android:layout_marginLeft="130dp"
            android:text=":  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mlab"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />


    <TextView
        android:layout_marginTop="120dp"
        android:text="@string/typename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/typelabel"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/modeledit" />

    <EditText
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/typehint"
        android:textColorHint="@color/grey"
        android:ems="10"
        android:id="@+id/typeedit"
        android:layout_toEndOf="@+id/typelabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:maxLength="20"
        android:maxLines="4"/>

        <TextView
            android:layout_marginTop="120dp"
            android:layout_marginLeft="130dp"
            android:text=":  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tlab"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />


        <TextView
        android:layout_marginTop="170dp"
        android:text="@string/modelyear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modelyearlabel"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/typeedit" />



    <EditText
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="date"
        android:hint="@string/modelyearhint"
        android:textColorHint="@color/grey"
        android:ems="10"
        android:id="@+id/modelyearedit"
        android:layout_toEndOf="@+id/modelyearlabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:maxLength="4"
        android:maxLines="4"/>

        <TextView
            android:layout_marginTop="170dp"
            android:layout_marginLeft="130dp"
            android:text=":  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mylab"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />


        <TextView
        android:layout_marginTop="220dp"
        android:text="@string/colorname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/colorlabel"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/modelyearedit"
        android:maxLength="20"
        android:maxLines="4"/>



    <EditText
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/colorhint"
        android:textColorHint="@color/grey"
        android:ems="10"
        android:id="@+id/coloredit"
        android:layout_toEndOf="@+id/colorlabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:maxLength="20"
        android:maxLines="4"/>

        <TextView
            android:layout_marginTop="220dp"
            android:layout_marginLeft="130dp"
            android:text=":  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clab"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />



        <TextView
        android:layout_marginTop="270dp"
        android:text="@string/platename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/platelabel"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/coloredit" />



    <EditText
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/platehint"
        android:textColorHint="@color/grey"
        android:ems="10"
        android:id="@+id/plateedit"
        android:layout_toEndOf="@+id/platelabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:maxLength="20"
        android:maxLines="4"/>

        <TextView
            android:layout_marginTop="270dp"
            android:layout_marginLeft="130dp"
            android:text=":  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plab"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />


        <TextView
        android:layout_marginTop="320dp"
        android:text="@string/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nicknamelabel"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/plateedit" />



    <EditText
        android:layout_marginTop="300dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/nicknamehint"
        android:textColorHint="@color/grey"
        android:ems="10"

        android:id="@+id/nicknameedit"
        android:layout_toEndOf="@+id/nicknamelabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

        <TextView
            android:layout_marginTop="320dp"
            android:layout_marginLeft="130dp"
            android:text=":  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nlab"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />



    </RelativeLayout>
    </ScrollView>



        <include layout="@layout/fabaction"
            android:id="@+id/include2" />



</RelativeLayout>

